--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ dependencies {
     compile group: 'org.springframework.security', name: 'spring-security-cas', version: '5.1.0.RELEASE'
     compile group: 'org.springframework.security', name: 'spring-security-config', version: '5.1.0.RELEASE'
     compile group: 'org.springframework.security', name: 'spring-security-web', version: '5.1.0.RELEASE'
-
+    compile 'javax.mail:mail:1.4.7'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
