--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
@@ -24,6 +25,7 @@ dependencies {
     compile group: 'org.springframework.security', name: 'spring-security-web', version: '5.1.0.RELEASE'
     compile 'javax.mail:mail:1.4.7'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile "org.mockito:mockito-core:2.+"
 }
 
 mainClassName = 'configuration.Application'
