--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 
     testCompile "org.mockito:mockito-core:1.+"
     testCompile group: 'junit', name: 'junit', version: '4.12'
-}
+    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'}
 
 mainClassName = 'configuration.Application'
