--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,10 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.6.RELEASE'
 }
 
-version '1.0-SNAPSHOT'
+version '1.0'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = '10'
+targetCompatibility = '10'
 
 repositories {
     mavenCentral()
@@ -30,4 +30,4 @@ dependencies {
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'}
 
-mainClassName = 'configuration.Application'
+mainClassName = 'notification.Application'
